[gd_scene load_steps=41 format=2]

[ext_resource path="res://ItemList.gd" type="Script" id=1]
[ext_resource path="res://Title.gd" type="Script" id=2]
[ext_resource path="res://hyperlink_website.gd" type="Script" id=3]
[ext_resource path="res://Images/fire_spritesheet.png" type="Texture" id=4]
[ext_resource path="res://sync_status.gd" type="Script" id=5]
[ext_resource path="res://main.gd" type="Script" id=6]
[ext_resource path="res://Images/x.png" type="Texture" id=7]
[ext_resource path="res://exit_button.gd" type="Script" id=8]
[ext_resource path="res://Images/minimize.png" type="Texture" id=9]
[ext_resource path="res://minimize.gd" type="Script" id=10]
[ext_resource path="res://RichTextLabel.gd" type="Script" id=11]
[ext_resource path="res://choose_dir.gd" type="Script" id=12]
[ext_resource path="res://term.gd" type="Script" id=13]
[ext_resource path="res://scroll_to_bottom.gd" type="Script" id=14]
[ext_resource path="res://topbar.gd" type="Script" id=15]
[ext_resource path="res://embers.tres" type="Material" id=16]

[sub_resource type="Theme" id=1]
/icons/ = null

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 384, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 384, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 384, 384, 128, 128 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="DynamicFontData" id=19]
font_path = "res://fonts/static/Oswald-Bold.ttf"

[sub_resource type="DynamicFont" id=20]
size = 24
font_data = SubResource( 19 )

[sub_resource type="DynamicFontData" id=21]
font_path = "res://fonts/Ubuntu_Mono/UbuntuMono-Regular.ttf"

[sub_resource type="DynamicFont" id=22]
font_data = SubResource( 21 )

[sub_resource type="DynamicFontData" id=23]
font_path = "res://fonts/Ubuntu_Mono/UbuntuMono-Regular.ttf"

[sub_resource type="DynamicFont" id=24]
font_data = SubResource( 23 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1011.0
margin_bottom = 570.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
material = ExtResource( 16 )
margin_left = 7.0
margin_top = 7.0
margin_right = 1004.0
margin_bottom = 563.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="ColorRect2" type="ColorRect" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1004.0
margin_bottom = 563.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.623529 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1004.0
margin_bottom = 563.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 997.0
margin_bottom = 25.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 939.0
margin_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 100, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 15 )

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 943.0
margin_right = 968.0
margin_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 25, 25 )

[node name="TextureButton" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
margin_right = 25.0
margin_bottom = 25.0
texture_normal = ExtResource( 9 )
expand = true
script = ExtResource( 10 )

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 972.0
margin_right = 997.0
margin_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 25, 25 )

[node name="Button" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer/MarginContainer3"]
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 15, 15 )
theme = SubResource( 1 )
texture_normal = ExtResource( 7 )
expand = true
script = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 997.0
margin_bottom = 106.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer"]
margin_right = 997.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 35.0
margin_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 35, 35 )
size_flags_vertical = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer2"]
visible = false
scale = Vector2( 0.493527, 0.52413 )
frames = SubResource( 18 )
frame = 6
playing = true
centered = false

[node name="CenterContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 39.0
margin_right = 918.0
margin_bottom = 77.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/CenterContainer"]
margin_right = 879.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/CenterContainer/MarginContainer"]
margin_right = 879.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 20 )
text = "Hardcore Companion App"
script = ExtResource( 2 )

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/CenterContainer"]
margin_top = 40.0
margin_right = 879.0
margin_bottom = 55.0

[node name="Label2" type="RichTextLabel" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/CenterContainer/MarginContainer2"]
margin_right = 879.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
bbcode_enabled = true
meta_underlined = false
script = ExtResource( 3 )

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/CenterContainer"]
margin_top = 59.0
margin_right = 879.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddonVersionLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/CenterContainer/MarginContainer3"]
margin_right = 879.0
margin_bottom = 18.0
rect_min_size = Vector2( 0, 18 )
bbcode_enabled = true
script = ExtResource( 5 )

[node name="MarginContainer" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 922.0
margin_right = 997.0
margin_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 75, 0 )
size_flags_vertical = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
scale = Vector2( 0.493527, 0.52413 )
frames = SubResource( 18 )
frame = 7
playing = true
centered = false

[node name="ScrollContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 997.0
margin_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/ScrollContainer2"]
margin_right = 35.0
margin_bottom = 20.0
rect_min_size = Vector2( 35, 0 )

[node name="FilePathMarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/ScrollContainer2"]
margin_left = 39.0
margin_right = 871.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="WoWPathText" type="RichTextLabel" parent="PanelContainer/VBoxContainer/ScrollContainer2/FilePathMarginContainer"]
margin_right = 832.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 800, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
script = ExtResource( 11 )

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer/ScrollContainer2"]
margin_left = 875.0
margin_right = 997.0
margin_bottom = 20.0

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/ScrollContainer2/MarginContainer2"]
margin_right = 122.0
margin_bottom = 20.0
text = "Choose Directory"
script = ExtResource( 12 )

[node name="FileDialog" type="FileDialog" parent="PanelContainer/VBoxContainer/ScrollContainer2/MarginContainer2/Button"]
margin_right = 315.0
margin_bottom = 130.0

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 997.0
margin_bottom = 343.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="PanelContainer/VBoxContainer/ScrollContainer"]
margin_right = 997.0
margin_bottom = 209.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
items = [ "Server", null, false, "Name", null, false, "Status", null, false, "Last modified", null, false, "Last updated", null, false ]
max_columns = 6
same_column_width = true
fixed_column_width = 150
script = ExtResource( 1 )

[node name="ScrollContainer3" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 347.0
margin_right = 997.0
margin_bottom = 556.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 14 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/ScrollContainer3"]
margin_right = 900.0
margin_bottom = 190.0

[node name="ColorRect" type="ColorRect" parent="PanelContainer/VBoxContainer/ScrollContainer3/MarginContainer"]
margin_right = 900.0
margin_bottom = 190.0
color = Color( 0, 0, 0, 0 )

[node name="TermText" type="RichTextLabel" parent="PanelContainer/VBoxContainer/ScrollContainer3/MarginContainer"]
margin_right = 900.0
margin_bottom = 190.0
rect_min_size = Vector2( 900, 190 )
custom_fonts/mono_font = SubResource( 22 )
custom_fonts/normal_font = SubResource( 24 )
bbcode_enabled = true
fit_content_height = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}
